# nim-proxy

./: AGENTS.md  AUTO_RANKER_SPEC.md  README.md  pyproject.toml
auto_ranker/: __init__.py  candidates.json  probe.py
examples/: opencode.json.snippet  overrides-thinking.json  overrides.json
graphify-out/: .graphify_analysis.json  GRAPH_REPORT.md  graph.html  graph.json  scubamount-nim-proxy-callflow.html
graphify-out/2026-06-04/: .graphify_semantic_marker  manifest.json
graphify-out/cache/: stat-index.json
nim_proxy/: __init__.py  app.py  config.py  overrides.py
scripts/: autolaunch.sh  com.scubamount.nim-proxy.plist  com.scubamount.nim-ranker.plist  install-ranker.sh  install.sh  launch-with-key.sh  restart.sh  update.sh
tests/: test_overrides.py  test_probe.py
