[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scubamount-nim-proxy"
version = "0.1.0"
description = "OpenAI-compatible-to-NVIDIA-NIM bridge that injects per-model reasoning parameters."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
nim-proxy = "nim_proxy.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["nim_proxy"]
